cmake_minimum_required(VERSION 3.13)
project(lesson_2_code C)

set(CMAKE_C_STANDARD 99)

add_executable(ex.1 code_2_1.c)

add_executable(ex.2 code_2_2.c)

add_executable(ex.3 code_2_3.c)

add_executable(ex.4 code_2_4.c)

add_executable(ex.5 code_2_5.c)

add_executable(ex.6 code_2_6.c)

add_executable(ex.7 code_2_7.c)

add_executable(ex.8 code_2_8.c)

add_executable(ex.9 code_2_9.c)